# FetchFolderArt

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows-exe.yml  python.yml
data/: README.md
screenshots/: README.md
scripts/: build_windows_exe.ps1  fetch_folder_art_gui.bat  run_fetch_folder_art.bat
src/fetchfolderart/: __init__.py  __main__.py  fetch_folder_art.py  fetch_folder_art_gui.py
