[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch-folder-art"
version = "1.0.0"
description = "Windows utility for finding and writing folder.jpg artwork for local music album folders."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "devphaZe foundry" }
]
keywords = ["music", "album-art", "folder.jpg", "musicbrainz", "discogs", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "mutagen>=1.47.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.scripts]
fetch-folder-art = "fetchfolderart.fetch_folder_art:main"

[project.gui-scripts]
fetch-folder-art-gui = "fetchfolderart.fetch_folder_art_gui:main"

[tool.setuptools.packages.find]
where = ["src"]
